--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Responsive Resume Template">
     <meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
-    <link rel="shortcut icon" href="favicon.ico"> 
+    <!--<link rel="shortcut icon" href="favicon.ico"> -->
     
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
@@ -29,7 +29,7 @@
 	    <div class="resume-wrapper-inner mx-auto text-left bg-white shadow-lg">
 		    <header class="resume-header pt-4 pt-md-0">
 			    <div class="media flex-column flex-md-row">
-				    <img class="mr-3 img-fluid picture mx-auto" src="assets/images/profile.jpg" alt="">
+				    <img class="mr-3 img-fluid picture mx-auto" src="assets/images/prithwirajLogo.jpg" alt="">
 				    <div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 					    <div class="primary-info">
 						    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Prithwiraj Das</h1>
@@ -55,7 +55,18 @@
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 				    <div class="resume-section-content">
-					    <p class="mb-0">Summarise your career here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can download this free resume/CV template here. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget.</p>
+					    <p class="mb-0">
+						    <ul>
+						•	Software developer with around 6 years of experience in Microsoft technologies (.Net), C#, SQL, and Web Development.
+						•	Strong in product development and technology upgrade projects. Rewrote a product from scratch and upgraded application from old frameworks and UI to newer and efficient ones. 
+						•	Strong in R&D, full-stack software environment.
+						•	Strong analytical problem-solving ability, cooperative, team player, and well organized. A key member of IOT Hackathon team 2018 from Fleet Complete.
+						•	Delivered a USD 3.0 million project for City of Ottawa in 2016, got appreciated and promoted.
+						•	Presented a marketing software at a showcase event at CBC news, representing the Department of Media Studies, Humber College and AMA Inc. The product was bought by Shopper’s Drugmart and two other companies.
+						•	Ontario Colleges Graduate Certificate in Information Technology Solutions from Humber College, Toronto, ON. Bachelor of Technology degree in Electrical Engineering from West Bengal University of Technology, India.
+						•	Worked on Angular 6, DevExpress, Kendo UI, Umbraco Dot Net Nuke and Dynamics CRM. Currently evaluating React JS, Knockout JS, Microsoft Azure and AWS for new initiatives.
+					    </ul>
+					    </p>
 				    </div>
 			    </section><!--//summary-section-->
 			    <div class="row">
