--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 				    <div class="resume-section-content">
 					    <p class="mb-0">
-						    <ul>
-						•	Software developer with around 6 years of experience in Microsoft technologies (.Net), C#, SQL, and Web Development.
-						•	Strong in product development and technology upgrade projects. Rewrote a product from scratch and upgraded application from old frameworks and UI to newer and efficient ones. 
-						•	Strong in R&D, full-stack software environment.
-						•	Strong analytical problem-solving ability, cooperative, team player, and well organized. A key member of IOT Hackathon team 2018 from Fleet Complete.
-						•	Delivered a USD 3.0 million project for City of Ottawa in 2016, got appreciated and promoted.
-						•	Presented a marketing software at a showcase event at CBC news, representing the Department of Media Studies, Humber College and AMA Inc. The product was bought by Shopper’s Drugmart and two other companies.
-						•	Ontario Colleges Graduate Certificate in Information Technology Solutions from Humber College, Toronto, ON. Bachelor of Technology degree in Electrical Engineering from West Bengal University of Technology, India.
-						•	Worked on Angular 6, DevExpress, Kendo UI, Umbraco Dot Net Nuke and Dynamics CRM. Currently evaluating React JS, Knockout JS, Microsoft Azure and AWS for new initiatives.
-					    </ul>
+						    <ul style="list-style-type:disc;">
+                                <li>Software developer with around 6 years of experience in Microsoft technologies (.Net), C#, SQL, and Web Development.</li>
+                                <li>Strong in product development and technology upgrade projects. Rewrote a product from scratch and upgraded application from old frameworks and UI to newer and efficient ones.</li>
+                                <li>Strong in R&D, full-stack software environment.</li>
+                                <li>Strong analytical problem-solving ability, cooperative, team player, and well organized. A key member of IOT Hackathon team 2018 from Fleet Complete.</li>
+                                <li>Delivered a USD 3.0 million project for City of Ottawa in 2016, got appreciated and promoted.</li>
+                                <li>Presented a marketing software at a showcase event at CBC news, representing the Department of Media Studies, Humber College and AMA Inc. The product was bought by Shopper’s Drugmart and two other companies.</li>
+                                <li>Ontario Colleges Graduate Certificate in Information Technology Solutions from Humber College, Toronto, ON. Bachelor of Technology degree in Electrical Engineering from West Bengal University of Technology, India.</li>
+                                <li>Worked on Angular 6, DevExpress, Kendo UI, Umbraco Dot Net Nuke and Dynamics CRM. Currently evaluating React JS, Knockout JS, Microsoft Azure and AWS for new initiatives.</li>
+                            </ul>
 					    </p>
 				    </div>
 			    </section><!--//summary-section-->
