--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                         <p class="mb-0">
                             <ul style="list-style-type:disc;">
                                 <li>Software developer with around 6 years of experience in Microsoft technologies (.Net), C#, SQL, and Web Development.</li>
-                                <li>Strong in product development and technology upgrade projects. Rewrote a product from scratch and upgraded application from old frameworks and UI to newer and efficient ones.</li>
-                                <li>Strong in R&D, full-stack software environment.</li>
+                                <li>Strong in product development, technology upgrade and integration projects. Rewrote a product from scratch and upgraded application from old frameworks and UI to newer and efficient ones. </li>
+                                <li>Strong in R&D, Professional Services and full-stack software Development</li>
                                 <li>Strong analytical problem-solving ability, cooperative, team player, and well organized. A key member of IOT Hackathon team 2018 from Fleet Complete.</li>
                                 <li>Delivered a USD 3.0 million project for City of Ottawa in 2016, got appreciated and promoted.</li>
                                 <li>Presented a marketing software at a showcase event at CBC news, representing the Department of Media Studies, Humber College and AMA Inc. The product was bought by Shopper’s Drugmart and two other companies.</li>
@@ -78,29 +78,34 @@
 
                                         <div class="resume-timeline-item-header mb-2">
                                             <div class="d-flex flex-column flex-md-row">
-                                                <h3 class="resume-position-title font-weight-bold mb-1">Lead Developer</h3>
-                                                <div class="resume-company-name ml-auto">Startup Hub</div>
+                                                <h3 class="resume-position-title font-weight-bold mb-1">Dynamics CRM/.Net Developer</h3>
+                                                <div class="resume-company-name ml-auto">Cineplex Entertainment</div>
                                             </div><!--//row-->
-                                            <div class="resume-position-time">2018 - Present</div>
+                                            <div class="resume-position-time">November 2018 - Present</div>
                                         </div><!--//resume-timeline-item-header-->
                                         <div class="resume-timeline-item-desc">
-                                            <p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec pede justo, fringilla vel.</p>
-                                            <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
-                                            <p>Praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
+                                            <p>
+                                                <stron>https://corporateorders.cineplex.com/ , https://giftcards.therecroom.com/, https://giftcards.cineplex.com/</stron>
+                                            </p>
+                                            <h4 class="resume-timeline-item-desc-heading font-weight-bold">Project: Corporate Fulfilment (CRM and Application)</h4>
+                                            <p>Corporate Fulfillment department is responsible for the Cineplex Gift Card and certificates sales and distribution to regular and corporate clients. The application is for clients to place the order and the CRM is for the Corporate Fulfilment department to manage and fulfill those orders. </p>
                                             <ul>
-                                                <li>Lorem ipsum dolor sit amet, 80% consectetuer adipiscing elit.</li>
-                                                <li>At vero eos et accusamus et iusto odio dignissimos.</li>
-                                                <li>Blanditiis praesentium voluptatum deleniti atque corrupti.</li>
-                                                <li>Maecenas tempus tellus eget.</li>
+                                                <li>Responsible for adding new feature to the application frontend, service layer and CRM</li> 
+                                                <li>Front end application is on Agility CMS framework, Service layer is WCF application and CRM is MS CRM Dynamics 2016 on-premise</li> 
+                                                <li>Responsibilities also include creating task according to user stories and allocating time against them</li> 
+                                                <li>Create, update and maintain Views, and Stored Procedures, windows services and scheduled tasks</li>
                                             </ul>
                                             <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
                                             <ul class="list-inline">
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Angular</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Python</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">jQuery</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Webpack</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">HTML/SASS</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">PostgresSQL</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">.NET</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Dynamics CRM 2016 and 365</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">C#</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">SQL Server 2016</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Agility CMS</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Knockout JS</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">T-SQL</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">JavaScript</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">XRM framework</span></li>
                                             </ul>
                                         </div><!--//resume-timeline-item-desc-->
 
