--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Responsive Resume Template">
     <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
-    <!--<link rel="shortcut icon" href="favicon.ico"> -->
+    <link rel="shortcut icon" href="fontawesome.com/icons/user-tie?style=solid">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
 
@@ -268,7 +268,7 @@
                                 <div class="resume-skill-item">
                                     <h4 class="resume-skills-cat font-weight-bold">Others</h4>
                                     <ul class="list-inline">
-                                        <li class="list-inline-item"><span class="badge badge-light">DevOps</span></li>
+                                        <!-- <li class="list-inline-item"><span class="badge badge-light">DevOps</span></li>
                                         <li class="list-inline-item"><span class="badge badge-light">Code Review</span></li>
                                         <li class="list-inline-item"><span class="badge badge-light">Git</span></li>
                                         <li class="list-inline-item"><span class="badge badge-light">Unit Testing</span></li>
@@ -277,6 +277,41 @@
                                         <li class="list-inline-item"><span class="badge badge-light">Balsamiq</span></li>
                                         <li class="list-inline-item"><span class="badge badge-light">WordPress</span></li>
                                         <li class="list-inline-item"><span class="badge badge-light">Shopify</span></li>
+                                        -->
+                                        <li class="list-inline-item"><span class="badge badge-light">C#</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>T-SQL</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>JSON</li> 
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>XML</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>JavaScript</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>JQuery</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>Ajax</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>Html5</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>CSS3 (BOOTSTRAP 3)</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>VB.Net</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>Angular 6</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>Java</li>
+ 	
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>Web API 2</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>.Net Core</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>ASP.NET</li> 
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>ADO.NET</li> 
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>Entity Framework</li> <li class="list-inline-item"><span class="badge badge-light"></span>MVC 5</li> 
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>SPA</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>Web Services</li> 
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>REST</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>SOAP</li> 
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>SAAS</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>PowerShell</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"></span> Dot Net Nuke CMS</li> 
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>Umbraco CMS </li> <li class="list-inline-item"><span class="badge badge-light"></span>Knockout JS</li> 
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>WCF</li> 
+                                        <li class="list-inline-item"><span class="badge badge-light"></span> Dynamics CRM 2016</li> 
+                                        <li class="list-inline-item"><span class="badge badge-light"></span>Dynamics CRM 365</li>
+<!-- •	Databases: 	Microsoft SQL Server 2008 and 2012, Oracle 11g and My SQL
+•	IDEs: 	Visual Studio 2012 - 2017 , SQL Server 2012 – 2016, VS Code, NetBeans, Eclipse, Oracle.
+•	Source Control:   Team Foundation Server (TFS), SourceTree, Tortoise SVN, GitLab, GitHub, Azure DevOps.
+•	Tools: 	JIRA, Bidbucket TeamSupport, Telerik, Kendo UI, DevExpress, ReSharper, Postman Chrome, MS Project, Visio, Test Manager, Redgate SQL Compare, CustomerWise and SharePoint, WCAG 2.0 level AA or AODA. -->
+
                                     </ul>
                                 </div><!--//resume-skill-item-->
                             </div><!--resume-section-content-->
