--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Prithwiraj Das | Full Stack Developer</title>
+    <title>Prithwiraj Das | Senior Software Developer</title>
 
     <!-- Meta -->
     <meta charset="utf-8">
@@ -55,12 +55,14 @@
                     <div class="resume-section-content">
                         <p class="mb-0">
                             <ul style="list-style-type:disc;">
-                                <li>Software developer with around 6 years of experience in Microsoft technologies (.Net), C#, SQL, and Web Development.</li>
-                                <li>Strong in product development, technology upgrade and integration projects. Rewrote a product from scratch and upgraded application from old frameworks and UI to newer and efficient ones. </li>
+                                <li>Senior Software developer with 7+ years of experience in Microsoft technologies (.Net), C#, SQL, and Web Development.</li>
+                                <li>Strong in product development, technology upgrade and integration projects.</li>
                                 <li>Strong in R&D, Professional Services and full-stack software Development</li>
-                                <li>Strong analytical problem-solving ability, cooperative, team player, and well organized. A key member of IOT Hackathon team 2018 from Fleet Complete.</li>
-                                <li>Delivered a USD 3.0 million project for City of Ottawa in 2016, got appreciated and promoted.</li>
-                                <li>Presented a marketing software at a showcase event at CBC news, representing the Department of Media Studies, Humber College and AMA Inc. The product was bought by Shopper’s Drugmart and two other companies.</li>
+                                <li>Passionate about writing clean, reusable and robust code</li>
+                                <li>Test driven development. Domain driven design</li>
+                                <li>Developing Scalable applications using design patterns and SOLID principles</li>
+                                <li>Efficient knowledge transfer to peers and mentoring of junior team members.</li>
+                                <li>Effective communication and teamwork skills.Strong analytical problem-solving ability, cooperative, team player, and well organized.</li>
                                 <li>Ontario Colleges Graduate Certificate in Information Technology Solutions from Humber College, Toronto, ON. Bachelor of Technology degree in Electrical Engineering from West Bengal University of Technology, India.</li>
                                 <li>Worked on Angular 6, DevExpress, Kendo UI, Umbraco Dot Net Nuke and Dynamics CRM. Currently evaluating React JS, Knockout JS, Microsoft Azure and AWS for new initiatives.</li>
                             </ul>
