--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Prithwiraj Das | Senior Software Developer</title>
@@ -32,7 +32,7 @@
                     <div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
                         <div class="primary-info">
                             <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Prithwiraj Das</h1>
-                            <div class="title mb-3">Full Stack Developer</div>
+                            <div class="title mb-3">Senior Software Developer</div>
                             <ul class="list-unstyled">
                                 <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>prithwirajDas07@gmail.com</a></li>
                                 <li><a href="#"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>647 705 6210</a></li>
@@ -391,4 +391,3 @@
 
 </body>
 </html>
-
