--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -76,6 +77,41 @@
                             <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Work Experience</h2>
                             <div class="resume-section-content">
                                 <div class="resume-timeline position-relative">
+									<article class="resume-timeline-item position-relative pb-5">
+
+                                        <div class="resume-timeline-item-header mb-2">
+                                            <div class="d-flex flex-column flex-md-row">
+                                                <h3 class="resume-position-title font-weight-bold mb-1">Senior Software Developer</h3>
+                                                <div class="resume-company-name ml-auto">PayBright</div>
+                                            </div><!--//row-->
+                                            <div class="resume-position-time">August 2019 - Present</div>
+                                        </div><!--//resume-timeline-item-header-->
+                                        <div class="resume-timeline-item-desc">
+                                            <h4 class="resume-timeline-item-desc-heading font-weight-bold">Project: PayBright (Core Loan systems)</h4>
+                                            <p>The core loan system is the end to end solution on which PayBright operates. PayBright provides small to medium loans to customers on their retail purchases instore and online. There are different products for different type of merchants form integrated solution with Samsung, to pay in 4 solution with Wayfair, to virtual card solution with eBay, platform solutions with Shopify and Klarna that PayBright offers. </p>
+                                            <ul>
+												<li>Develop, update, deploy and maintain the core loan system features. Design and implement measures to ensure data integrity and ETL server.</li> 
+												<li>Review code and help peers to follow coding standers.</li> 
+												<li>Hire developers joining different rolls in the technology department</li> 
+												<li>Responsibilities also include creating task according to user stories and allocating time against them.</li> 
+												<li>Code and functional specification reviews and new product initiative discussions.</li> 
+                                            </ul>
+                                            <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
+                                            <ul class="list-inline">
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">.NET</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">C#</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">SQL Server 2016</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">T-SQL</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Web API</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Mongo db</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">MVC 5</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">React JS</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">RedGate SQL</span></li>
+                                            </ul>
+                                        </div><!--//resume-timeline-item-desc-->
+
+                                    </article><!--//resume-timeline-item-->
+									
                                     <article class="resume-timeline-item position-relative pb-5">
 
                                         <div class="resume-timeline-item-header mb-2">
@@ -83,7 +119,7 @@
                                                 <h3 class="resume-position-title font-weight-bold mb-1">Dynamics CRM/.Net Developer</h3>
                                                 <div class="resume-company-name ml-auto">Cineplex Entertainment</div>
                                             </div><!--//row-->
-                                            <div class="resume-position-time">November 2018 - Present</div>
+                                            <div class="resume-position-time">November 2018 - August 2019</div>
                                         </div><!--//resume-timeline-item-header-->
                                         <div class="resume-timeline-item-desc">
                                             <p>
@@ -108,32 +144,6 @@
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">T-SQL</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">JavaScript</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">XRM framework</span></li>
-                                            </ul>
-                                        </div><!--//resume-timeline-item-desc-->
-
-                                    </article><!--//resume-timeline-item-->
-
-                                    <article class="resume-timeline-item position-relative pb-5">
-
-                                        <div class="resume-timeline-item-header mb-2">
-                                            <div class="d-flex flex-column flex-md-row">
-                                                <h3 class="resume-position-title font-weight-bold mb-1">Senior Software Developer</h3>
-                                                <div class="resume-company-name ml-auto">Google</div>
-                                            </div><!--//row-->
-                                            <div class="resume-position-time">2014 - 2018</div>
-                                        </div><!--//resume-timeline-item-header-->
-                                        <div class="resume-timeline-item-desc">
-                                            <p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec pede justo, fringilla vel.</p>
-                                            <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements</h4>
-                                            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-                                            <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
-                                            <ul class="list-inline">
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">React</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Redux</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Django</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Webpack</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">HTML/SASS</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">MySQL</span></li>
                                             </ul>
                                         </div><!--//resume-timeline-item-desc-->
 
@@ -391,3 +401,5 @@
 
 </body>
 </html>
+
+
