--- a/index.html
+++ b/index.html
@@ -211,65 +211,56 @@
                             <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Skills &amp; Tools</h2>
                             <div class="resume-section-content">
                                 <div class="resume-skill-item">
-                                    <h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
+                                    <!-- <h4 class="resume-skills-cat font-weight-bold">Frontend</h4> -->
                                     <ul class="list-unstyled mb-4">
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">Angular</div>
+                                            <div class="resume-skill-name">C#</div>
                                             <div class="progress resume-progress">
                                                 <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
                                         </li>
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">React</div>
+                                            <div class="resume-skill-name">T-SQL</div>
                                             <div class="progress resume-progress">
-                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 94%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
                                         </li>
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">JavaScript</div>
+                                            <div class="resume-skill-name">.Net Core</div>
                                             <div class="progress resume-progress">
-                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 83%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
                                         </li>
 
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">Node.js</div>
+                                            <div class="resume-skill-name">Web API</div>
                                             <div class="progress resume-progress">
                                                 <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 92%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
                                         </li>
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">HTML/CSS/SASS/LESS</div>
+                                            <div class="resume-skill-name">HTML/CSS</div>
                                             <div class="progress resume-progress">
-                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 73%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
                                         </li>
                                     </ul>
-                                </div><!--//resume-skill-item-->
-
-                                <div class="resume-skill-item">
-                                    <h4 class="resume-skills-cat font-weight-bold">Backend</h4>
+									
                                     <ul class="list-unstyled">
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">Python/Django</div>
+                                            <div class="resume-skill-name">JS/JQuery</div>
                                             <div class="progress resume-progress">
-                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 73%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
                                         </li>
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">Ruby/Rails</div>
+                                            <div class="resume-skill-name">SPA</div>
                                             <div class="progress resume-progress">
-                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 92%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 73%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
                                         </li>
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">PHP</div>
-                                            <div class="progress resume-progress">
-                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 86%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                        </li>
-                                        <li class="mb-2">
-                                            <div class="resume-skill-name">WordPress/Shopify</div>
+                                            <div class="resume-skill-name">CMS/CRM</div>
                                             <div class="progress resume-progress">
                                                 <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 82%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
@@ -291,34 +282,36 @@
                                         <li class="list-inline-item"><span class="badge badge-light">Shopify</span></li>
                                         -->
                                         <li class="list-inline-item"><span class="badge badge-light">C#</span></li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>T-SQL</li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>JSON</li> 
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>XML</li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>JavaScript</li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>JQuery</li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>Ajax</li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>Html5</li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>CSS3 (BOOTSTRAP 3)</li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>VB.Net</li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>Angular 6</li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>Java</li>
+                                        <li class="list-inline-item"><span class="badge badge-light">T-SQL</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">JSON</span></li> 
+                                        <li class="list-inline-item"><span class="badge badge-light">XML</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">JavaScript</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">JQuery</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">Ajax</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">Html5</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">CSS3 (BOOTSTRAP 3)</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">VB.Net</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">Angular</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Knockout JS </span></li> 
+										<li class="list-inline-item"><span class="badge badge-light">React JS </span></li> 
  	
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>Web API 2</li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>.Net Core</li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>ASP.NET</li> 
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>ADO.NET</li> 
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>Entity Framework</li> <li class="list-inline-item"><span class="badge badge-light"></span>MVC 5</li> 
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>SPA</li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>Web Services</li> 
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>REST</li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>SOAP</li> 
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>SAAS</li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>PowerShell</li>
-                                        <li class="list-inline-item"><span class="badge badge-light"></span> Dot Net Nuke CMS</li> 
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>Umbraco CMS </li> <li class="list-inline-item"><span class="badge badge-light"></span>Knockout JS</li> 
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>WCF</li> 
-                                        <li class="list-inline-item"><span class="badge badge-light"></span> Dynamics CRM 2016</li> 
-                                        <li class="list-inline-item"><span class="badge badge-light"></span>Dynamics CRM 365</li>
+                                        <li class="list-inline-item"><span class="badge badge-light">Web API</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">.Net Core</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">ASP.NET</span></li> 
+                                        <li class="list-inline-item"><span class="badge badge-light">ADO.NET</span></li> 
+                                        <li class="list-inline-item"><span class="badge badge-light">Entity Framework</span></li> 
+										<li class="list-inline-item"><span class="badge badge-light">MVC 5</span></li> 
+                                        <li class="list-inline-item"><span class="badge badge-light">SPA</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">Web Services</span></li> 
+                                        <li class="list-inline-item"><span class="badge badge-light">REST </span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">SOAP </span></li> 
+                                        <li class="list-inline-item"><span class="badge badge-light">SAAS </span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">PowerShell </span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light"> Dot Net Nuke CMS </span></li> 
+                                        <li class="list-inline-item"><span class="badge badge-light">Umbraco CMS </span> </li> 
+										
+                                        <li class="list-inline-item"><span class="badge badge-light"> Dynamics CRM 2016</li> 
+                                        <li class="list-inline-item"><span class="badge badge-light">Dynamics CRM 365</li>
 <!-- •	Databases: 	Microsoft SQL Server 2008 and 2012, Oracle 11g and My SQL
 •	IDEs: 	Visual Studio 2012 - 2017 , SQL Server 2012 – 2016, VS Code, NetBeans, Eclipse, Oracle.
 •	Source Control:   Team Foundation Server (TFS), SourceTree, Tortoise SVN, GitLab, GitHub, Azure DevOps.
